<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    tools:context=".personalDetails.view.PersonalDetailsActivity">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/ivHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/gradient_background" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/BmiDetails"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlHeader"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/gradient_relative">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="30dp"
            android:alpha=".4"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvBodyMassIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:alpha=".5"
            android:text="@string/bodyMassIndex"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_below="@id/tvBodyMassIndex"
            android:layout_marginTop="2dp"
            android:alpha=".4"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvBMIPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="20.55"
            android:textColor="@color/whiteColor"
            android:textSize="44sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tvBMIPercentage"
            android:layout_alignStart="@id/tvBMIPercentage"
            android:layout_alignEnd="@id/tvBMIPercentage"
            android:layout_marginTop="5dp"
            android:background="@color/whiteColor" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="Hello olivia, you'r normal"
            android:textColor="@color/whiteColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/normalRange"
            android:textColor="@color/whiteColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvPonderalIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRange"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="Ponderal index: 10.64kg/m3"
            android:textColor="@color/whiteColor"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/llShareDetails"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tvPonderalIndex"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            android:weightSum="3.5">

            <RelativeLayout
                android:id="@+id/rlShare"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/user_name_box">

                <ImageView
                    android:id="@+id/ivShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:src="@mipmap/share" />

                <TextView
                    android:id="@+id/tvShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/ivShare"
                    android:text="@string/share"
                    android:textColor="@color/whiteColor"
                    android:textSize="14sp" />

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

            <RelativeLayout
                android:id="@+id/rlRat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/user_name_box">

                <ImageView
                    android:id="@+id/ivRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:src="@mipmap/rate" />

                <TextView
                    android:id="@+id/tvRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/ivRate"
                    android:text="@string/rate"
                    android:textColor="@color/whiteColor"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>